resolved introduction play button section on mobile and desktop

--- a/src/components/play/brick/introduction/Introduction.scss
+++ b/src/components/play/brick/introduction/Introduction.scss
@@ -492,17 +492,14 @@
         color: var(--theme-dark-blue);
         align-items: center;
         justify-content: flex-end;
+        width: 100%;
+        right: 0;
         @include phone_and_tabletP {
-          width: 100%;
           position: fixed;
-          bottom: 6.5vh;
-          right: 0vw;
+          bottom: 7vh;
         }
         @include tabletP {
           position: absolute;
-          left: 50%;
-          transform: translateX(-50%);
-          width: 22vw;
           bottom: 5vw;
         }
         .play-preview {
@@ -520,17 +517,18 @@
         > div {
           @extend %flexCenter;
           flex-direction: column;
-          margin: 0 3vw;
           @include phone_and_tabletP {
+            margin: 0 3vw;
             min-width: 18vw;
           }
           @include tabletP {
-            min-width: 4vw;
+            margin: 0 1vw;
+            min-width: 6vw;
           }
           &.direction-info {
             width: 100%;
-            padding: 0 1vw;
             position: relative;
+            margin: 0;
             > h2 {
               margin-top: 0;
               margin-bottom: 0;
@@ -549,14 +547,15 @@
               color: var(--theme-dark-blue);
             }
             > h3 {
-              left: 1.8vw;
               letter-spacing: inherit;
               margin: 0;
               @include phone_and_tabletP {
+                left: 1.8vw;
                 font-size: 6vw;
                 top: -6vw;
               }
               @include tabletP {
+                left: 0.3vw;
                 top: -1vw;
               }
             }
